--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lapin = "1.2.1"
+fern = "0.6.0"
+
+lettre = "0.9.3"
+lettre_email = "0.9.4"
