--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,14 @@ chrono = "0.4.13"
 
 # AMQP Client
 lapin = "1.2.1"
+tokio-amqp = "0.1.3"
 
 # Email Client
 lettre = "0.9.3"
 lettre_email = "0.9.4"
+
+# Misc
+tokio = { version = "0.2.22", features = ["macros", "io-util"] }
 
 [target.'cfg(debug_assertions)'.dependencies]
 
