--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-AMQP_HOST=amqp://127.0.0.1:5672/
-LOG_LEVEL=DEBUG
+LOG_LEVEL=INFO
+
+AMQP_HOST=amqp://127.0.0.1:5672/%2f
+
+SMTP_SERVER=smtp.mailtrap.io
+SMTP_USERNAME=ead20c959b7ac0
+SMTP_PASSWORD=b91c969160c5a1
