--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,12 +21,17 @@ tokio-amqp = "0.1.3"
 lettre = "0.9.3"
 lettre_email = "0.9.4"
 
+# Serde
+serde_json = "1.0.57"
+serde = "1.0.115"
+
 # Misc
 tokio = { version = "0.2.22", features = ["macros"] }
 lazy_static = "1.4.0"
 native-tls = "0.2.4"
-
-[target.'cfg(debug_assertions)'.dependencies]
+envy = "0.4.1"
 
 # .env support for debug environments
+[target.'cfg(debug_assertions)'.dependencies]
+
 dotenv = "0.15.0"
